2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (t_load): New variable.
	(parse_args) [flag_have_runtime]: Set it.
	(leave) [flag_have_runtime]: Print info about load phase.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (t_decode, t_execute): New variables.
	(main) [flag_have_runtime]: Set them.
	(leave) [flag_have_runtime]: Print info about decode and execute phase.
	(time_sub): Change interface to return sec, us and ms.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (CFLAGS): Resurrect -O3.
	* avr-insns.def (LDI, MOV, MOVW): Move before...
	(LAST_FAST): This new insn.
	* avrtest.c (do_fast): New function.
	(do_step): Use it for IDs < ID_LAST_FAST.
	(func_LAST_FAST): New function.
	(leave): Fix missing 0s in %ld.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (data_read_byte_raw): Factor out magic ports to...
	(data_read_magic_port): ...this new function.
	(data_write_byte_raw): Factor out magic ports to...
	(data_write_magic_port): ...this new function.
	(do_step): Move TICKS_PORT handling to data_read_magic_port.
	* avrtest.h (FIRST_MAGIC_IN_PORT, LAST_MAGIC_IN_PORT)
	(FIRST_MAGIC_OUT_PORT, LAST_MAGIC_OUT_PORT): New defines.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (execute): Merge two loops to one.  Make inline.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (leave) [-runtime]: Show instructions per ms.
	(instr_count): New variable.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (-no-ticks): Remove option and replace by...
	(-ticks): ...this one with reversed logic.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (avr_op_*): Rename to func_*.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (avr_op_index_*): Rename to ID_*.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (CX): New define depending on xmega.
	* avr-insns.def (CBI, EICALL, ICALL, LDS, PUSH, RCALL, SBI)
	(SBIC, SBIS): Use CX to adjust instruction timing for xmega.
